--- a/report/ref.bib
+++ b/report/ref.bib
@@ -10,6 +10,23 @@
  year={2011}
 }
 
+@book{friedman2001elements,
+  title={The elements of statistical learning},
+  author={Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert},
+  volume={1},
+  number={10},
+  year={2001},
+  publisher={Springer series in statistics New York, NY, USA:}
+}
+
+@Misc{pcavsfa,
+  howpublished = {\url{https://scikit-learn.org/stable/auto_examples/decomposition/plot_pca_vs_fa_model_selection.html#sphx-glr-auto-examples-decomposition-plot-pca-vs-fa-model-selection-py}},
+  note = {Accessed January 18, 2019},
+  title = {Model selection with Probabilistic PCA and Factor Analysis},
+  author = {Gramfort, Alexandre and Engemann, Denis}
+}
+
+
 @inproceedings{zhang2018dynamic,
   title={A Dynamic Resource Overbooking Mechanism in Fog Computing},
   author={Zhang, Fuming and Tang, Zhiqing and Chen, Mingcheng and Zhou, Xiaojie and Jia, Weijia},
